--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "devDependencies": {
     "@astrojs/react": "^0.1.0",
+    "@astrojs/tailwind": "^0.1.0",
     "@astrojs/vue": "^0.0.2",
+    "@aws-sdk/client-ec2": "^3.60.0",
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.0",
     "astro": "^1.0.0-beta.0",
+    "postcss": "^8.4.12",
     "react": "^17.0.2 || ^18.0.0",
     "react-dom": "^17.0.2 || ^18.0.0",
+    "tailwindcss": "^3.0.23",
     "vue": "^3.2.30"
   }
 }
