--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.4.12",
     "react": "^17.0.2 || ^18.0.0",
     "react-dom": "^17.0.2 || ^18.0.0",
+    "react-icons": "^4.3.1",
     "tailwindcss": "^3.0.23",
     "vue": "^3.2.30"
   }
