--- a/package.json
+++ b/package.json
@@ -6,21 +6,26 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@astrojs/react": "^0.1.0",
-    "@astrojs/tailwind": "^0.1.0",
-    "@astrojs/vue": "^0.0.2",
-    "@aws-sdk/client-ec2": "^3.60.0",
+    "@astrojs/react": "^0.1.1",
+    "@astrojs/tailwind": "^0.2.0",
+    "@astrojs/vue": "^0.1.3",
+    "@aws-sdk/client-ec2": "^3.76.0",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
+    "@types/jest": "^27.4.1",
     "astro": "^1.0.0-beta.0",
+    "jest": "^27.5.1",
     "postcss": "^8.4.12",
     "react": "^17.0.2 || ^18.0.0",
     "react-dom": "^17.0.2 || ^18.0.0",
     "react-icons": "^4.3.1",
-    "tailwindcss": "^3.0.23",
-    "vue": "^3.2.30"
+    "tailwindcss": "^3.0.24",
+    "ts-jest": "^27.1.4",
+    "vue": "^3.2.33"
   }
 }
